--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -20,6 +20,7 @@
 
 </div>
 
-
-  <%= render 'shared/footer', category: @category, colorfooter: "black" %>
+<div id="footer" class="footer-black">
+  <%= render 'shared/footer' %>
+</div>
 
