--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,6 +12,6 @@
 
 
 
-<div id="footer-white">
-  <%= render 'shared/footer', category: nil, colorfooter: nil %>
+<div id="footer" class="footer-white">
+  <%= render 'shared/footer'%>
 </div>
