--- a/app/views/shared/_dropdown-burger.html.erb
+++ b/app/views/shared/_dropdown-burger.html.erb
@@ -44,9 +44,13 @@
                 <% end %>
               <% end %>
             </div>
-
           <% end %>
         <% end %>
+        <div class="margin-by-category">
+          <% if !@auteur.nil? %>
+            <li><%= link_to "L'auteure", auteure_path, class:"btns-burger" %> </li>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
