--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -80,9 +80,10 @@
   #footer i {
     font-size: 25px !important;
   }
-  // #footer-white .dropdown {
-  //   padding: 8px 8px 6px 8px;
-  // }
+  .footer-black {
+    position: relative;
+  }
+
   .direction-share-links i {
     // font-size: 14px !important;
     font-size: 24px !important;
