--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -245,7 +245,8 @@
   overflow-y: scroll;
   top: 50px;
   bottom: 30px;
-  width: 80%;
+  right: 26px;
+  width: 82%;
 }
 
 // #style-1::-webkit-scrollbar-track
