--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Images et encadrement par Chloé Rolland. </title>
-    <meta name="description" content="Bienvenu.e.s ! Chloé Rolland choisit le digital pour publier son histoire « À l’Est du centre ». Un voyage initiatique raconté à travers sept années de rencontres et de déplacement…">
+    <title>Images et encadrement - Chloé Rolland </title>
+    <meta name="description" content="Bienvenue dans cet espace. Je partage ici, avec toi, ces moments où je m’autorise à retrouver la beauté de ce qui est. En images.">
 
-    <meta property="og:title" content="Images et encadrement par Chloé Rolland. ">
+    <meta property="og:title" content="Images et encadrement - Chloé Rolland ">
     <meta property="og:image" content="https://res.cloudinary.com/dnks6vpqk/image/upload/v1539331237/banner_image.jpg">
-    <meta property="og:description" content="Bienvenu.e.s ! Chloé Rolland choisit le digital pour publier son histoire « À l’Est du centre ». Un voyage initiatique raconté à travers sept années de rencontres et de déplacement…">
+    <meta property="og:description" content="Bienvenue dans cet espace. Je partage ici, avec toi, ces moments où je m’autorise à retrouver la beauté de ce qui est. En images.">
     <meta property="og:site_name" content="Image."/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@chloerolland">
-    <meta name="twitter:title" content="Images et encadrement par Chloé Rolland. ">
-    <meta name="twitter:description" content="Bienvenu.e.s ! Chloé Rolland choisit le digital pour publier son histoire « À l’Est du centre ». Un voyage initiatique raconté à travers sept années de rencontres et de déplacement…">
+    <meta name="twitter:title" content="Images et encadrement - Chloé Rolland ">
+    <meta name="twitter:description" content="Bienvenue dans cet espace. Je partage ici, avec toi, ces moments où je m’autorise à retrouver la beauté de ce qui est. En images.">
     <meta name="twitter:creator" content="@chloerolland">
     <meta name="twitter:image:src" content="https://res.cloudinary.com/dnks6vpqk/image/upload/v1539331237/banner_image.jpg">
 
