--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,7 +26,7 @@
     </a>
   </div>
 
-  <div style="display: none">
+  <div style="opacity: 0; z-index: -100; position: fixed; top: -100px">
     <input type="text" value="<%= url_for(:only_path => false) %>" id="myInput">
   </div>
 
@@ -35,5 +35,12 @@
 
 
 
-
+<script>
+  function myFunction() {
+    var copyText = document.getElementById("myInput");
+    copyText.select();
+    document.execCommand("copy");
+    alert("Copied the text: " + copyText.value);
+  }
+</script>
 
