--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -21,7 +21,7 @@
   <div class="direction-share-links hidden">
     <a onclick="myFunction()" style="cursor: pointer;"><i class="fas fa-link whiteJsNavBar"></i> <span class="hidden-xs">Copier le lien</span></a>
     <a href="mailto:?&amp;body=<%= url_for(:only_path => false) %>&amp;"><i class="far fa-envelope whiteJsNavBar"></i><span class="hidden-xs"> Envoyer par mail</span></a>
-    <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fimage.herokuapp.com%2F&amp;src=sdkpreparse" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,left=,top=,screenX=,screenY=,width=300,height= 400');" target="_blank" title="Share This on Facebook">
+    <a href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fchloerolland.fr%2F&amp;src=sdkpreparse" onclick="window.open(this.href,'targetWindow','toolbar=no,location=no,status=no,menubar=no,scrollbars=yes,resizable=yes,left=,top=,screenX=,screenY=,width=300,height= 400');" target="_blank" title="Share This on Facebook">
       <i class="fab fa-facebook-f whiteJsNavBar"></i><span class="hidden-xs">Facebook</span>
     </a>
   </div>
