--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,8 +2,8 @@
 
   <div id="absolute-left" class="hidden-xs">
     <% if params[:action] == "home" %>
-        <p  style="font-size: 10px;">All content &#169 Chloé Rolland 2018</p>
-        <%= link_to root_path do%>
+        <p  style="font-size: 10px;">Tout contenu &#169 Chloé Rolland 2018</p>
+        <%= link_to "https://www.malt.fr/profile/donatienrolland" do %>
           Site internet Donatien Rolland
         <% end %>
     <% end %>
