--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,7 +3,7 @@
   <div id="absolute-left" class="hidden-xs">
     <% if params[:action] == "home" %>
         <p  style="font-size: 10px;">Tout contenu &#169 Chloé Rolland 2018</p>
-        <%= link_to "https://www.malt.fr/profile/donatienrolland" do %>
+        <%= link_to "https://www.malt.fr/profile/donatienrolland", target: "_blank" do %>
           Site internet Donatien Rolland
         <% end %>
     <% end %>
