--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,10 +2,8 @@
 
   <div id="absolute-left" class="hidden-xs">
     <% if params[:action] == "home" %>
-        <p  style="font-size: 10px;">Tout contenu &#169 Chloé Rolland 2018</p>
-        <%= link_to "https://www.malt.fr/profile/donatienrolland", target: "_blank" do %>
-          Site internet Donatien Rolland
-        <% end %>
+        <p  style="font-size: 10px; padding-right: 0; ">Tout contenu &#169 Chloé Rolland 2018. Site internet</p>
+        <%= link_to "Donatien Rolland", "https://www.malt.fr/profile/donatienrolland", target: "_blank" %>
     <% end %>
   </div>
 
