--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -115,18 +115,22 @@
 #absolute-left {
   grid-column: 1 / span 1;
   display: flex;
-  align-items: center;
+  // align-items: center;
+  align-self: end;
   a {
+    font-size: 10px;
+    font-weight: 600;
+    padding-bottom: 0;
+    padding-left: 2px;
+    text-decoration: underline;
+  }
+  a:hover {
     font-size: 10px;
     font-weight: 600;
     // text-decoration: none;
   }
-  a:hover {
-    font-size: 11px;
-    font-weight: 600;
-    // text-decoration: none;
-  }
   p {
+    padding-bottom: 0;
     font-size: 10px;
     color: white;
     font-weight: 600;
