--- a/app/views/shared/_burger_icon.html.erb
+++ b/app/views/shared/_burger_icon.html.erb
@@ -1,4 +1,4 @@
- <svg id="burger_menu" data-name="Calque 1" data-toggle="dropdown" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" class="dropdown-toggle">
+ <svg id="burger_menu" data-name="Calque 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" class="dropdown-toggle">
   <title>Menu</title>
   <path d="M182.28,56.81h-37.9c-2.06,0-17.1.6-19.14.82l-50.73,4c-2.4.25-14.25.81-16.67.81H16.52v-20h39c1.89,0,15.91-.5,17.78-.7l49.53-3.87c2.77-.3,18.2-1,21-1h38.44Z"/>
   <path d="M17.12,157.58H55c2.06,0,17.1.6,19.14.82l50.73,4c2.4.26,14.25.82,16.67.82h41.32v-20h-39c-1.88,0-15.91-.5-17.78-.7l-49.53-3.87c-2.77-.3-18.2-1-21-1H17.12Z"/>
