--- a/app/assets/stylesheets/pages/_picture.scss
+++ b/app/assets/stylesheets/pages/_picture.scss
@@ -4,7 +4,7 @@
 .title-picture {
   margin: 4vh 0;
 }
-.div-picture-background {
+.div-picture-background img {
   background-size: contain !important;
   background-repeat: no-repeat;
 }
