--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -9,7 +9,7 @@
       </div>
 
       <div class="texts-auteur col-sm-6" style="">
-        <p style="width: 100%; hyphens: auto; text-align: justify;font-size: 0.9em;line-height: 1.9em;"><%= @auteur.intro %></p>
+        <p style="width: 100%; hyphens: auto; text-align: justify;font-size: 14px;line-height: 1.9em;"><%= @auteur.intro %></p>
         <% if @auteur.motto.present? %>
           <br>
           <p style="width: 180px;" id="moto"><%= @auteur.motto %></p>
