--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -8,8 +8,8 @@
         <p style="margin-top: 10px !important; font-size: 9px" class="visible-xs"><%= @auteur.description %> </p>
       </div>
 
-      <div class="texts-auteur col-sm-6" style="">
-        <p style="width: 100%; hyphens: auto; text-align: justify;font-size: 14px;line-height: 1.9em;"><%= @auteur.intro %></p>
+      <div class="texts-auteur col-sm-6" style="margin-top: 3%">
+        <p style="width: 90%; hyphens: auto; text-align: justify;font-size: 14px;line-height: 1.9em;"><%= @auteur.intro %></p>
         <% if @auteur.motto.present? %>
           <br>
           <p style="width: 180px;" id="moto"><%= @auteur.motto %></p>
