--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -22,16 +22,24 @@
     <div class="col-lg-5 select-album">
       <%= f.label :album, required: false %>
       <%= f.select :album_id, options_for_select( Album.all.where(category: @category).collect {|p| [ p.title, p.id ] }, selected: params[:query].present? ? params[:query] : params[:picture][:album_id]) %>
-      <%= f.input :title, as: :text, label: "Titre" %>
-      <%= f.input :hauteur, input_html: { value: f.object.hauteur || 550 } %>
-      <%= f.label :rotation, required: false %>
-      <br>
-      <%= f.input :rotation, input_html: { value: f.object.rotation || 0 }, as: :hidden %>
-      <div class="rotation btn" data-rotation="negative">
-        <i class="fas fa-undo"></i>
-      </div>
-      <div class="rotation btn" data-rotation="positive">
-        <i class="fas fa-redo"></i>
+      <%= f.input :title, label: "Titre" %>
+      <%= f.input :tags, as: :text, label: "Tags", placeholder:"Mots clés pour améliorer le SEO - 5 max" %>
+      <div class="row">
+        <div class="col-sm-6" style="padding: 0px">
+          <%= f.input :hauteur, input_html: { value: f.object.hauteur || 550 } %>
+        </div>
+        <div class="col-sm-6" style="padding: 0px; text-align: center;">
+          <%= f.label :rotation, required: false %>
+          <%= f.input :rotation, input_html: { value: f.object.rotation || 0 }, as: :hidden %>
+          <br>
+          <div class="rotation btn" data-rotation="negative">
+            <i class="fas fa-undo"></i>
+          </div>
+          <div class="rotation btn" data-rotation="positive">
+            <i class="fas fa-redo"></i>
+          </div>
+
+        </div>
       </div>
     </div>
     <div class="btns-action">
