update instagram link

--- a/app/assets/stylesheets/pages/_presentation.scss
+++ b/app/assets/stylesheets/pages/_presentation.scss
@@ -45,7 +45,7 @@
     margin-top: 3%;
     column-fill: auto;
     height: 75vh;
-    column-count: 2;
+    columns: 17rem auto;
     column-gap: 35px;
     padding-left: 45px;
   }
