--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
   </div>
 
   <div class="links-contact">
-    <%= link_to 'https://www.instagram.com/chloe_rolland_44/?hl=fr', target: "_blank" do %>
+    <%= link_to 'https://www.instagram.com/chloe__com17/', target: "_blank" do %>
       <i class="fab fa-instagram whiteJsNavBar"></i>
     <% end %>
     <%= mail_to User.where(auteur: true).first.email do %>
