--- a/app/views/pages/auteure.html.erb
+++ b/app/views/pages/auteure.html.erb
@@ -1,15 +1,15 @@
 <div class="container-all-dimension">
 
     <div id="auteur-presentation row">
-      <div class="div-picture-background col-sm-6" style="margin-top: 3%">
+      <div class="div-picture-background col-md-6" style="margin-top: 3%">
         <%= cl_image_tag @auteur.photo, alt: @auteur.alt, width:"100%", id:"size-xs", class:"hidden-xs" %>
         <p style="margin-top: 20px !important; font-size: 10px" class="hidden-xs"><%= @auteur.description %> </p>
         <%= cl_image_tag @auteur.photo, style:"width:100%", class:"visible-xs" %>
         <p style="margin-top: 10px !important; font-size: 9px" class="visible-xs"><%= @auteur.description %> </p>
       </div>
 
-      <div class="texts-auteur col-sm-6" style="margin-top: 3%">
-        <p style="width: 90%; hyphens: auto; text-align: justify;font-size: 14px;line-height: 1.9em;"><%= @auteur.intro %></p>
+      <div class="texts-auteur col-md-6" style="margin-top: 3%">
+        <p style="width: 90%; hyphens: auto; line-height: 1.9em;"><%= @auteur.intro %></p>
         <% if @auteur.motto.present? %>
           <br>
           <p style="width: 180px;" id="moto"><%= @auteur.motto %></p>
